--- a/Server/IBigDataPortal/Dockerfile
+++ b/Server/IBigDataPortal/Dockerfile
@@ -28,6 +28,12 @@ RUN dotnet restore
 # Build and publish a release
 RUN dotnet publish -c Release -o out
 
+# Install proxy for SQL
+RUN wget https://dl.google.com/cloudsql/cloud_sql_proxy.linux.amd64 -O cloud_sql_proxy
+RUN chmod +x cloud_sql_proxy
+
+CMD ["sh", "-c", "./cloud_sql_proxy -instances=engineering-thesis-346319:us-central1:portalsqlserver=tcp:0.0.0.0:3306"]
+
 # Build runtime image
 FROM mcr.microsoft.com/dotnet/aspnet:6.0
 WORKDIR /app
