--- a/.github/workflows/Portal-api.yml
+++ b/.github/workflows/Portal-api.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           files: "Server/IBigDataPortal/Portal/appsettings.json"
         env:
-          connectionStrings.SqlConnectionString: ${{ secrets.GCP_CONNECTION_STRING }}
+          connectionStrings.SqlConnectionString: ${{ secrets.AZURE_CONNECTION_STRING }}
 
       - name: Build the Docker image 
         working-directory: ./Server/IBigDataPortal
