Implemented first create post form + secured api from unauthorized calls

--- a/Server/IBigDataPortal/Portal/appsettings.json
+++ b/Server/IBigDataPortal/Portal/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "connectionStrings": {
-    "SqlConnectionString": "Server=DESKTOP-PUSJJCS;Database=IBigDataDatabase;Trusted_Connection=True;"
+    "SqlConnectionString": "Server=FLUTTERSHY\\SQLEXPRESS;Database=IBigDataDatabase;Trusted_Connection=True;"
   },
   "AllowedHosts": "*"
 }
