--- a/App/package.json
+++ b/App/package.json
@@ -17,6 +17,7 @@
     "node-sass": "^7.0.0",
     "react": "^18.1.0",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.31.2",
     "react-hot-toast": "^2.2.0",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
