--- a/App/package.json
+++ b/App/package.json
@@ -14,13 +14,14 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.26.0",
+    "date-fns": "^2.28.0",
     "node-sass": "^7.0.0",
     "react": "^18.1.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.31.2",
     "react-hot-toast": "^2.2.0",
     "react-router-dom": "6",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
     "redux-persist": "^6.0.0",
     "sass": "^1.50.0",
     "typescript": "^4.5.4",
@@ -57,8 +58,9 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
-    "eslint": "^8.5.0",
+    "eslint": "8.0.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.1",
     "prettier": "^2.5.1",
