--- a/App/.eslintrc.json
+++ b/App/.eslintrc.json
@@ -8,6 +8,7 @@
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended",
         "plugin:react/recommended",
+        "react-app",
         "plugin:prettier/recommended"
     ],
     "parser": "@typescript-eslint/parser",
