--- a/App/package.json
+++ b/App/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.31.2",
     "react-hot-toast": "^2.2.0",
+    "react-paginate": "^8.1.3",
     "react-router-dom": "6",
     "react-scripts": "^5.0.1",
     "redux-persist": "^6.0.0",
@@ -58,11 +59,11 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
-    "eslint": "8.0.0",
+    "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react": "^7.30.0",
     "prettier": "^2.5.1",
     "yarn-upgrade-all": "^0.7.1"
   }
