--- a/App/package.json
+++ b/App/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.31.2",
     "react-hot-toast": "^2.2.0",
+    "react-loader-spinner": "^6.0.0-0",
     "react-paginate": "^8.1.3",
     "react-router-dom": "6",
     "react-scripts": "^5.0.1",
