--- a/Server/IBigDataPortal/JobOffers.Application/JobOffers.Application.csproj
+++ b/Server/IBigDataPortal/JobOffers.Application/JobOffers.Application.csproj
@@ -6,4 +6,14 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MediatR" Version="10.0.1" />
+      <PackageReference Include="MediatR.Contracts" Version="1.0.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\JobOffers.Domain\JobOffers.Domain.csproj" />
+      <ProjectReference Include="..\Portal.Infrastructure\Portal.Infrastructure.csproj" />
+    </ItemGroup>
+
 </Project>
