--- a/App/package.json
+++ b/App/package.json
@@ -18,6 +18,7 @@
     "node-sass": "^7.0.0",
     "react": "^18.1.0",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^14.2.1",
     "react-hook-form": "^7.31.2",
     "react-hot-toast": "^2.2.0",
     "react-loader-spinner": "^6.0.0-0",
