--- a/App/package.json
+++ b/App/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^16.11.14",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "@types/react-modal": "^3.13.1",
     "axios": "^0.26.0",
     "date-fns": "^2.28.0",
     "node-sass": "^7.0.0",
@@ -22,6 +23,7 @@
     "react-hook-form": "^7.31.2",
     "react-hot-toast": "^2.2.0",
     "react-loader-spinner": "^6.0.0-0",
+    "react-modal": "^3.15.1",
     "react-paginate": "^8.1.3",
     "react-router-dom": "6",
     "react-scripts": "^5.0.1",
