--- a/App/package.json
+++ b/App/package.json
@@ -25,8 +25,10 @@
     "react-loader-spinner": "^6.0.0-0",
     "react-modal": "^3.15.1",
     "react-paginate": "^8.1.3",
+    "react-redux": "^7.2.8",
     "react-router-dom": "6",
     "react-scripts": "^5.0.1",
+    "react-spinners": "^0.12.0",
     "redux-persist": "^6.0.0",
     "sass": "^1.50.0",
     "typescript": "^4.5.4",
