--- a/Server/IBigDataPortal/Files.Domain/Files.Domain.csproj
+++ b/Server/IBigDataPortal/Files.Domain/Files.Domain.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <PackageReference Include="Google.Apis.Auth" Version="1.57.0" />
       <PackageReference Include="Google.Cloud.Storage.V1" Version="4.0.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="6.0.0-preview.4.21253.5" />
     </ItemGroup>
 
 </Project>
