removed keys trrack

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ Server/API/.idea/.idea.API/.idea/.gitignore
 Server/API/.idea/.idea.API/.idea/encodings.xml
 Server/API/.idea/.idea.API/.idea/indexLayout.xml
 Server/API/.idea/.idea.API/.idea/vcs.xml
+Server/IBigDataPortal/Portal/GCPCredentials.json
