--- a/Server/IBigDataPortal/Files.Application/Files.Application.csproj
+++ b/Server/IBigDataPortal/Files.Application/Files.Application.csproj
@@ -14,6 +14,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Files.Domain\Files.Domain.csproj" />
+      <ProjectReference Include="..\Files.Infrastructure\Files.Infrastructure.csproj" />
       <ProjectReference Include="..\Portal.Infrastructure\Portal.Infrastructure.csproj" />
     </ItemGroup>
 
