Implemented files edit

--- a/Server/IBigDataPortal/EduLinks.Application/EduLinks.Application.csproj
+++ b/Server/IBigDataPortal/EduLinks.Application/EduLinks.Application.csproj
@@ -13,6 +13,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\EduLinks.Domain\EduLinks.Domain.csproj" />
+      <ProjectReference Include="..\Files.Contracts\Files.Contracts.csproj" />
       <ProjectReference Include="..\Portal.Infrastructure\Portal.Infrastructure.csproj" />
     </ItemGroup>
 
