--- a/Server/IBigDataPortal/JobOffers.Application/JobOffers.Application.csproj
+++ b/Server/IBigDataPortal/JobOffers.Application/JobOffers.Application.csproj
@@ -12,6 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Files.Contracts\Files.Contracts.csproj" />
       <ProjectReference Include="..\JobOffers.Domain\JobOffers.Domain.csproj" />
       <ProjectReference Include="..\Portal.Infrastructure\Portal.Infrastructure.csproj" />
     </ItemGroup>
