--- a/Server/IBigDataPortal/Articles.Application/Articles.Application.csproj
+++ b/Server/IBigDataPortal/Articles.Application/Articles.Application.csproj
@@ -12,9 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Files.Contracts\Files.Contracts.csproj" />
-      <ProjectReference Include="..\JobOffers.Contracts\JobOffers.Contracts.csproj" />
-      <ProjectReference Include="..\JobOffers.Domain\JobOffers.Domain.csproj" />
+      <ProjectReference Include="..\Articles.Domain\Articles.Domain.csproj" />
       <ProjectReference Include="..\Portal.Infrastructure\Portal.Infrastructure.csproj" />
     </ItemGroup>
 
