--- a/Server/IBigDataPortal/EduLinks.Application/EduLinks.Application.csproj
+++ b/Server/IBigDataPortal/EduLinks.Application/EduLinks.Application.csproj
@@ -12,6 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\EduLinks.Contracts\EduLinks.Contracts.csproj" />
       <ProjectReference Include="..\EduLinks.Domain\EduLinks.Domain.csproj" />
       <ProjectReference Include="..\Files.Contracts\Files.Contracts.csproj" />
       <ProjectReference Include="..\Portal.Infrastructure\Portal.Infrastructure.csproj" />
