--- a/Server/IBigDataPortal/Files.Domain/Files.Domain.csproj
+++ b/Server/IBigDataPortal/Files.Domain/Files.Domain.csproj
@@ -12,4 +12,8 @@
       <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="6.0.0-preview.4.21253.5" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Files.Contracts\Files.Contracts.csproj" />
+    </ItemGroup>
+
 </Project>
