--- a/App/public/manifest.json
+++ b/App/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "IBigWorld",
+  "name": "BigData Smart JobHub",
   "icons": [
     {
       "src": "favicon.ico",
