Added simple permission system with deleting and permission modifing systems

--- a/Server/IBigDataPortal/Portal.Infrastructure/Portal.Infrastructure.csproj
+++ b/Server/IBigDataPortal/Portal.Infrastructure/Portal.Infrastructure.csproj
@@ -26,4 +26,8 @@
       <PackageReference Include="Microsoft.AspNetCore.App" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="ResourceBasedAuthorization\Handlers\Articles" />
+    </ItemGroup>
+
 </Project>
