--- a/Server/IBigDataPortal/ApplicationUserDomain/ApplicationUserDomain.csproj
+++ b/Server/IBigDataPortal/ApplicationUserDomain/ApplicationUserDomain.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\UserRole.Contracts\UserRole.Contracts.csproj" />
+    </ItemGroup>
+
 </Project>
