--- a/App/package.json
+++ b/App/package.json
@@ -16,6 +16,7 @@
     "@types/react-modal": "^3.13.1",
     "axios": "^0.26.0",
     "date-fns": "^2.28.0",
+    "html-react-parser": "^3.0.1",
     "node-sass": "^7.0.0",
     "react": "^18.1.0",
     "react-dom": "^17.0.2",
@@ -71,6 +72,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.30.0",
     "prettier": "^2.5.1",
+    "react-quill": "^1.3.5",
     "yarn-upgrade-all": "^0.7.1"
   }
 }
