--- a/Server/IBigDataPortal/Portal/Portal.csproj
+++ b/Server/IBigDataPortal/Portal/Portal.csproj
@@ -26,6 +26,8 @@
     <ItemGroup>
       <ProjectReference Include="..\ApplicationUser\ApplicationUser.csproj" />
       <ProjectReference Include="..\Articles.Application\Articles.Application.csproj" />
+      <ProjectReference Include="..\Comments.Application\Comments.Application.csproj" />
+      <ProjectReference Include="..\Comments.Domain\Comments.Domain.csproj" />
       <ProjectReference Include="..\EduLinks.Application\EduLinks.Application.csproj" />
       <ProjectReference Include="..\Files.Application\Files.Application.csproj" />
       <ProjectReference Include="..\Files.Domain\Files.Domain.csproj" />
