--- a/Server/IBigDataPortal/JobOffers.Contracts/JobOffers.Contracts.csproj
+++ b/Server/IBigDataPortal/JobOffers.Contracts/JobOffers.Contracts.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Files.Contracts\Files.Contracts.csproj" />
+      <ProjectReference Include="..\UserRole.Contracts\UserRole.Contracts.csproj" />
     </ItemGroup>
 
 </Project>
