--- a/Server/IBigDataPortal/EduLinks.Domain/EduLinks.Domain.csproj
+++ b/Server/IBigDataPortal/EduLinks.Domain/EduLinks.Domain.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Files.Contracts\Files.Contracts.csproj" />
+      <ProjectReference Include="..\UserRole.Contracts\UserRole.Contracts.csproj" />
     </ItemGroup>
 
 </Project>
