--- a/Server/IBigDataPortal/Portal/Portal.csproj
+++ b/Server/IBigDataPortal/Portal/Portal.csproj
@@ -28,6 +28,8 @@
       <ProjectReference Include="..\Articles.Application\Articles.Application.csproj" />
       <ProjectReference Include="..\Comments.Application\Comments.Application.csproj" />
       <ProjectReference Include="..\Comments.Domain\Comments.Domain.csproj" />
+      <ProjectReference Include="..\Cooperations.Application\Cooperations.Application.csproj" />
+      <ProjectReference Include="..\Cooperations.Domain\Cooperations.Domain.csproj" />
       <ProjectReference Include="..\EduLinks.Application\EduLinks.Application.csproj" />
       <ProjectReference Include="..\Files.Application\Files.Application.csproj" />
       <ProjectReference Include="..\Files.Domain\Files.Domain.csproj" />
