--- a/App/package.json
+++ b/App/package.json
@@ -27,6 +27,7 @@
     "react-modal": "^3.15.1",
     "react-paginate": "^8.1.3",
     "react-redux": "^7.2.8",
+    "react-responsive": "^9.0.0-beta.10",
     "react-router-dom": "6",
     "react-scripts": "^5.0.1",
     "react-spinners": "^0.12.0",
@@ -64,6 +65,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-responsive": "^8.0.5",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
     "eslint": "^8.16.0",
