--- a/App/package.json
+++ b/App/package.json
@@ -19,6 +19,7 @@
     "html-react-parser": "^3.0.1",
     "node-sass": "^7.0.0",
     "react": "^18.1.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
     "react-dropzone": "^14.2.1",
     "react-hook-form": "^7.31.2",
@@ -65,6 +66,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-datepicker": "^4.4.2",
     "@types/react-responsive": "^8.0.5",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
