--- a/App/package.json
+++ b/App/package.json
@@ -75,6 +75,7 @@
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.30.0",
+    "jest": "^28.1.3",
     "prettier": "^2.5.1",
     "react-quill": "^1.3.5",
     "yarn-upgrade-all": "^0.7.1"
