Initialized integration tests database seeds, restore and first test initialized

--- a/Server/IBigDataPortal/Portal/appsettings.json
+++ b/Server/IBigDataPortal/Portal/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "connectionStrings": {
-    "SqlConnectionString": "Server=localhost\\SQLEXPRESS;Database=IBigDataDatabase;Trusted_Connection=True;MultipleActiveResultSets=True"
+    "SqlConnectionString": "Server=localhost\\SQLEXPRESS;Database=IBigDataDatabase;Trusted_Connection=True;MultipleActiveResultSets=True",
+    "SqlTestingConnectionString": "Server=localhost\\SQLEXPRESS;Database=IBigDataDatabaseTesting;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
   "AllowedHosts": "*"
 }
