--- a/Server/IBigDataPortal/Portal.IntegrationTests/Portal.IntegrationTests.csproj
+++ b/Server/IBigDataPortal/Portal.IntegrationTests/Portal.IntegrationTests.csproj
@@ -7,7 +7,27 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="FluentAssertions" Version="6.7.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.9" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.4" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.4" />
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
       <PackageReference Include="xunit" Version="2.4.2" />
+      <PackageReference Include="xunit.abstractions" Version="2.0.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Portal.Database\Portal.Database.csproj" />
+      <ProjectReference Include="..\Portal\Portal.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="IntegrationTests\Cooperations" />
+      <Folder Include="IntegrationTests\EduLinks" />
+      <Folder Include="IntegrationTests\JobOffers" />
+      <Folder Include="IntegrationTests\Posts" />
+      <Folder Include="IntegrationTests\UserRoles" />
+      <Folder Include="IntegrationTests\Users" />
     </ItemGroup>
 
 </Project>
