--- a/Server/IBigDataPortal/Portal.IntegrationTests/testsettings.json
+++ b/Server/IBigDataPortal/Portal.IntegrationTests/testsettings.json
@@ -1,9 +1,3 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Debug",
-            "System": "Information",
-            "Microsoft": "Information"
-        }
-    }
+   "SqlTestingConnectionString": "Server=localhost\\SQLEXPRESS;Database=IBigDataDatabaseTesting;Trusted_Connection=True;MultipleActiveResultSets=True"
 }
