--- a/.github/workflows/Portal-api-integration-tests.yml
+++ b/.github/workflows/Portal-api-integration-tests.yml
@@ -43,12 +43,12 @@ jobs:
 
       - name: Restore dependencies
         run: dotnet restore
-        working-directory: ./Server/IBigDataPortal/Portal
+        working-directory: ./Server/IBigDataPortal/Portal.IntegrationTests
 
       - name: Build
         run: dotnet build --no-restore
-        working-directory: ./Server/IBigDataPortal/Portal
+        working-directory: ./Server/IBigDataPortal/Portal.IntegrationTests
 
       - name: Test
         run: dotnet test --no-build --verbosity normal
-        working-directory: ./Server/IBigDataPortal/Portal
+        working-directory: ./Server/IBigDataPortal/Portal.IntegrationTests
