--- a/.github/workflows/Portal-api-integration-tests.yml
+++ b/.github/workflows/Portal-api-integration-tests.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Replace connection string
         uses: microsoft/variable-substitution@v1
         with:
-          files: ./Server/IBigDataPortal/Portal/appsettings.json
+          files: ./Server/IBigDataPortal/Portal.IntegrationTests/testsettings.json
         env:
           connectionStrings.SqlTestingConnectionString: Server=localhost,1433; Database=Master; User Id=SA; Password=P@$$w0rd
 
