--- a/.github/workflows/Portal-api-integration-tests.yml
+++ b/.github/workflows/Portal-api-integration-tests.yml
@@ -32,7 +32,7 @@ jobs:
         with:
           files: ./Server/IBigDataPortal/Portal.IntegrationTests/testsettings.json
         env:
-          connectionStrings.SqlTestingConnectionString: Server=localhost,1433; Database=Master; User Id=SA; Password=P@$$w0rd
+          SqlTestingConnectionString: Server=localhost,1433; Database=Master; User Id=SA; Password=P@$$w0rd
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v1
