Created endpoint for other application

--- a/Server/IBigDataPortal/Portal/Portal.csproj
+++ b/Server/IBigDataPortal/Portal/Portal.csproj
@@ -34,6 +34,7 @@
       <ProjectReference Include="..\Files.Application\Files.Application.csproj" />
       <ProjectReference Include="..\Files.Domain\Files.Domain.csproj" />
       <ProjectReference Include="..\JobOffers.Application\JobOffers.Application.csproj" />
+      <ProjectReference Include="..\MobileApiOuterProject.Application\MobileApiOuterProject.Application.csproj" />
       <ProjectReference Include="..\Portal.Database\Portal.Database.csproj" />
       <ProjectReference Include="..\Portal.Infrastructure\Portal.Infrastructure.csproj" />
       <ProjectReference Include="..\Posts.Application\Posts.Application.csproj" />
